Enemy AI now keeps player in line of sight
Added a trace from the ai to the player in the eqs that now makes the enemy avoid moving anywhere that does not have line of sight to the player

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -67,3 +67,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/NavigationSystem.RecastNavMesh]
+CellSize=95.000000
+CellHeight=50.000000
+TileSizeUU=4750.000000
+
