Enemy AI Improved Aim & Avoidance
Enemy AI avoids getting stuck to each other better and also now has to be looking at you to shoot. Also no longer shoots the shit out of each other and has to have line of sight to the player to shoot.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,3 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 
@@ -31,7 +29,6 @@ MinSampleRate=8000.000000
 CompressionQualityModifier=1.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
-
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -71,7 +68,10 @@ ManualIPAddress=
 CellSize=95.000000
 CellHeight=50.000000
 TileSizeUU=4750.000000
+RuntimeGeneration=Static
 
 [/Script/AIModule.CrowdManager]
-bResolveCollisions=True
+bResolveCollisions=False
+MaxAgentRadius=5000.000000
+PathOffsetRadiusMultiplier=10.000000
 
