--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,6 +29,9 @@ MinSampleRate=8000.000000
 CompressionQualityModifier=1.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
+r.Streaming.PoolSize=3500
+r.DefaultFeature.MotionBlur=False
+r.VT.TileSize=1024
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -75,4 +78,7 @@ RuntimeGeneration=Static
 bResolveCollisions=False
 MaxAgentRadius=5000.000000
 PathOffsetRadiusMultiplier=10.000000
+
+[/Script/Engine.VirtualTexturePoolConfig]'
++Pools=(Formats=(PF_DXT5, PF_DXT5), SizeInMegabyte=512, bAllowSizeScale=True, bEnableResidencyMipMapBias=True)
 
