--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -93,8 +93,7 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+MapsToCook=(FilePath="/Game/Levels/lvl_MainMenu")
-+MapsToCook=(FilePath="/Game/Levels/MountainV2")
++MapsToCook=(FilePath="/Game/Levels/BuildLevel")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
