Some fixes on the last day that I don't remember
Some changes were probably lost when I unstashed my changes after a pull. Playermech and main menu widget suddenly had no changes so keep an eye out on those two.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -94,6 +94,8 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/Levels/BuildLevel")
++MapsToCook=(FilePath="/Game/Levels/lvl_MainMenu")
++MapsToCook=(FilePath="/Game/Levels/Tutorial")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
