update nav settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,6 +77,8 @@ TileSizeUU=4750.000000
 RuntimeGeneration=Static
 AgentRadius=300.000000
 AgentHeight=500.000000
+AgentMaxSlope=89.000000
+AgentMaxStepHeight=150.000000
 
 [/Script/AIModule.CrowdManager]
 bResolveCollisions=False
